--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "online-chess-frontend",
-  "version": "0.1.0",
+  "name": "chess-frontend",
+  "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "chess.js": "^1.0.0-beta.8",
-    "react": "^18.2.0",
-    "react-chessboard": "^4.7.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +31,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=16.4.0"
+  },
+  "dependencies": {
+    "chess.js": "^1.0.0-beta.8",
+    "react": "^17.0.2",
+    "react-chessboard": "^2.0.0",
+    "react-dnd": "^14.0.0",
+    "react-dnd-html5-backend": "^14.0.0",
+    "react-dom": "^17.0.2"
   }
 }
