--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-chessboard": "^2.0.0",
     "react-dnd": "^14.0.0",
     "react-dnd-html5-backend": "^14.0.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.26.2"
   }
 }
