--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "node": ">=16.4.0"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "chess.js": "^1.0.0-beta.8",
     "react": "^17.0.2",
     "react-chessboard": "^2.0.0",
